--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -52,8 +52,8 @@ jobs:
             cmake: >
               -DIVW_MODULE_EIGENUTILS=ON
               -DIVW_MODULE_HDF5=ON
-              -DIVW_MODULE_FFMPEG=ON
-              -DIVW_MODULE_WEBBROWSER=ON
+              -DIVW_MODULE_FFMPEG=OFF
+              -DIVW_MODULE_WEBBROWSER=OFF
             preset: ninja-developer
             targets: 'all'
             installer: 'inviwo-installer-macos'
@@ -67,8 +67,8 @@ jobs:
             cmake: >
               -DIVW_MODULE_EIGENUTILS=ON
               -DIVW_MODULE_HDF5=ON
-              -DIVW_MODULE_FFMPEG=ON
-              -DIVW_MODULE_WEBBROWSER=ON
+              -DIVW_MODULE_FFMPEG=OFF
+              -DIVW_MODULE_WEBBROWSER=OFF
               -DIVW_TEST_BENCHMARKS=OFF
             preset: ninja-developer
             targets: 'all'
