--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -52,8 +52,8 @@ jobs:
             cmake: >
               -DIVW_MODULE_EIGENUTILS=ON
               -DIVW_MODULE_HDF5=ON
-              -DIVW_MODULE_FFMPEG=OFF
-              -DIVW_MODULE_WEBBROWSER=OFF
+              -DIVW_MODULE_FFMPEG=ON
+              -DIVW_MODULE_WEBBROWSER=ON
             preset: ninja-developer
             targets: 'all'
             installer: 'inviwo-installer-macos'
@@ -74,7 +74,7 @@ jobs:
             targets: 'all'
             installer: 'inviwo-installer-ubuntu'
             artifact: 'build/inviwo-v*.deb'
-            run: 'QT_QPA_PLATFORM="offscreen" && ./inviwo --logconsole --quit'
+            run: QT_QPA_PLATFORM=offscreen ./inviwo --logconsole --quit
           
           # linkage
           - linkage: 'dynamic'
@@ -349,7 +349,7 @@ jobs:
     - name: "Run"
       shell: bash
       working-directory: "build/bin"
-      run: ./inviwo --logconsole --quit
+      run: QT_QPA_PLATFORM=offscreen ./inviwo --logconsole --quit
 
     - name: "Setup tmate session (on failure and debug_enabled)"
       if: ${{ failure() && (github.event_name == 'workflow_dispatch' && inputs.debug_enabled) }}
