--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -317,6 +317,10 @@ jobs:
           libutfcpp-dev libxcursor-dev libxinerama-dev libxrandr-dev libznz-dev \
           nlohmann-json3-dev zlib1g zlib1g-dev python3 python3-numpy python3-pip \
           qt6-base-dev qt6-tools-dev
+        sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 130 \
+                                 --slave /usr/bin/g++ g++ /usr/bin/g++-13 \
+                                 --slave /usr/bin/gcov gcov /usr/bin/gcov-12
+        sudo update-alternatives --set gcc /usr/bin/gcc-13
 
     - name: "Clone Inviwo"
       uses: actions/checkout@v4
