--- a/modules/basegl/CMakeLists.txt
+++ b/modules/basegl/CMakeLists.txt
@@ -58,6 +58,9 @@ set(HEADER_FILES
     include/modules/basegl/processors/isoraycaster.h
     include/modules/basegl/processors/layerprocessing/layerbinary.h
     include/modules/basegl/processors/layerprocessing/layerglprocessor.h
+    include/modules/basegl/processors/layerprocessing/layergrayscale.h
+    include/modules/basegl/processors/layerprocessing/layerinvert.h
+    include/modules/basegl/processors/layerprocessing/layermapping.h
     include/modules/basegl/processors/layerrenderer.h
     include/modules/basegl/processors/lightingraycaster.h
     include/modules/basegl/processors/lightvolumegl.h
@@ -180,6 +183,9 @@ set(SOURCE_FILES
     src/processors/isoraycaster.cpp
     src/processors/layerprocessing/layerbinary.cpp
     src/processors/layerprocessing/layerglprocessor.cpp
+    src/processors/layerprocessing/layergrayscale.cpp
+    src/processors/layerprocessing/layerinvert.cpp
+    src/processors/layerprocessing/layermapping.cpp
     src/processors/layerrenderer.cpp
     src/processors/lightingraycaster.cpp
     src/processors/lightvolumegl.cpp
