PathTracer: Made optimized shaders for either opacity or no opacity info

--- a/modules/pathtracing/CMakeLists.txt
+++ b/modules/pathtracing/CMakeLists.txt
@@ -19,6 +19,7 @@ ivw_group("Source Files" ${SOURCE_FILES})
 
 set(SHADER_FILES
     glsl/bidirectionalvolumepathtracer.comp
+    glsl/bidirectionalvolumepathtraceruniform.comp
     glsl/distributions.glsl
     glsl/lightestimation.glsl
     glsl/random.glsl
