Cimg: LayerResampling processor

--- a/modules/cimg/CMakeLists.txt
+++ b/modules/cimg/CMakeLists.txt
@@ -9,6 +9,7 @@ set(HEADER_FILES
     include/modules/cimg/cimgsavebuffer.h
     include/modules/cimg/cimgutils.h
     include/modules/cimg/cimgvolumereader.h
+    include/modules/cimg/processors/layerresampling.h
     include/modules/cimg/tifflayerreader.h
     include/modules/cimg/tiffstackvolumereader.h
 )
@@ -20,6 +21,7 @@ set(SOURCE_FILES
     src/cimgsavebuffer.cpp
     src/cimgutils.cpp
     src/cimgvolumereader.cpp
+    src/processors/layerresampling.cpp
     src/tifflayerreader.cpp
     src/tiffstackvolumereader.cpp
 )
