--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -17,7 +17,7 @@ permissions:
   contents: write  # Enable vcpkg to write to the dependency graph
 
 env:
-  VCPKG_BINARY_SOURCES: 'clear;x-gha,readwrite'   # recognized by vcpkg
+  VCPKG_BINARY_SOURCES: 'clear;x-gha,readwrite;http,https://jenkins.inviwo.org/cache/{sha},readwrite,Authorization: Bearer ${{ secrets.VCPKG_CACHE_TOKEN }}'
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   VCPKG_FEATURE_FLAGS: dependencygraph
   # QT_DEBUG_PLUGINS: 1                           # print qt plugin debug info
@@ -343,6 +343,7 @@ jobs:
         -DIVW_MODULE_FFMPEG=OFF
         -DIVW_MODULE_WEBBROWSER=ON
         -DIVW_TEST_BENCHMARKS=OFF
+        -DCMAKE_CXX_FLAGS='-stdlib=libc++'
         
     - name: "Setup C++ Log matchers"
       uses: Trass3r/setup-cpp@master
