Python: cmake update for installations

--- a/modules/python3/bindings/CMakeLists.txt
+++ b/modules/python3/bindings/CMakeLists.txt
@@ -98,8 +98,22 @@ set(SOURCE_FILES
 )
 ivw_group("Source Files" ${SOURCE_FILES})
 
-ivw_add_py_wrapper(inviwopy ${SOURCE_FILES} ${HEADER_FILES})
+ivw_add_py_wrapper(inviwopy)
+target_sources(inviwopy
+    PUBLIC
+    FILE_SET HEADERS
+    TYPE HEADERS
+    BASE_DIRS include
+    FILES
+        ${HEADER_FILES}
+    PRIVATE
+        ${SOURCE_FILES}
+)
 target_link_libraries(inviwopy PUBLIC inviwo::core inviwo::module::python3)
-target_include_directories(inviwopy PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-ivw_default_install_targets(inviwopy)
+
+ivw_install_helper(TARGET inviwopy
+    NAMESPACE inviwo
+    DESTINATION inviwo
+)
+
