--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -441,10 +441,6 @@ jobs:
         -DIVW_MODULE_EIGENUTILS=ON
         -DIVW_MODULE_HDF5=ON
 
-    - name: "Debug"
-      shell: bash
-      run: ls -al ${{ env.LLVM_PATH }}/bin
-
     - uses: cpp-linter/cpp-linter-action@v2.11.0
       id: linter
       env:
@@ -454,7 +450,7 @@ jobs:
         database: ../build
         style: 'file'
         tidy-checks: ''
-        version: ${{ env.LLVM_PATH }}/bin
+        version: ${{ env.LLVM_VERSION }}
         tidy-review: true
         format-review: false
         step-summary: true
