--- a/modules/python3/CMakeLists.txt
+++ b/modules/python3/CMakeLists.txt
@@ -104,7 +104,7 @@ endif()
 option(IVW_PACKAGE_EMBED_PYTHON "Embed a python dist in the installer.\ 
 
  Otherwise a existing python installation is needed to run inviwo" ON)
-if(BUILD_SHARED_LIBS AND IVW_PACKAGE_EMBED_PYTHON)
+if(IVW_PACKAGE_EMBED_PYTHON)
     if(WIN32)
         if(IVW_CFG_CMAKE_DEBUG)
             set(show SHOW_PROGRESS)
